Use 'overflow' to prevent body scrolling instead of 'position'
Also get rid of .DS_Store in images folder 🙄

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -12,6 +12,7 @@ body {
   color: #5A5957;
   font-family: "Roboto";
   font-weight: 700;
+  -webkit-tap-highlight-color: transparent; // iOS tap overlay thing
 }
 
 // Text Sections
